# ComfyUI-Transformers

./: README.md  nodes.py  pyproject.toml  requirements.txt
.github/: FUNDING.yml
computer_vision/transformers/depth_estimation/: node.py
computer_vision/transformers/image_classification/: node.py
computer_vision/transformers/image_segmentation/: node.py
computer_vision/transformers/mask-generation/: node.py
computer_vision/transformers/object_detection/: node.py
huggingface_tasks/: utils.py
huggingface_tasks/audio/audio_classification/: node.py
huggingface_tasks/audio/automatic_speech_recognition/: node.py
huggingface_tasks/audio/text2speech/: node.py
huggingface_tasks/audio/zero_shot_audio_classification/: node.py
huggingface_tasks/computer_vision/depth_estimation/: node.py
huggingface_tasks/computer_vision/image_classification/: node.py
huggingface_tasks/computer_vision/image_feature_extraction/: node.py
huggingface_tasks/computer_vision/image_segmentation/: node.py
huggingface_tasks/computer_vision/image_to_image/: node.py
huggingface_tasks/computer_vision/keypoint_detection/: node.py
huggingface_tasks/computer_vision/mask_generation/: node.py
huggingface_tasks/computer_vision/object_detection/: node.py
huggingface_tasks/computer_vision/video_classification/: node.py
huggingface_tasks/computer_vision/zero_shot_image_classification/: node.py
huggingface_tasks/computer_vision/zero_shot_object_detection/: node.py
huggingface_tasks/multimodal/document_question_answering/: node.py
huggingface_tasks/utility/: node.py
(+16 files in other folders)
